# pico2w_clock

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.c
src/bsp/: bsp_st7306.c  bsp_st7306.h
src/configs/: wifi.h
src/configs/lvgl/: lv_conf.h
src/configs/lvgl/porting/: lv_port_disp.c
src/lib/ntp/: ntp.c  ntp.h
